--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.15.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "grpc-web": "^1.5.0",
+    "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "postgres": "^3.4.4",
     "protobufjs": "^7.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
